@@ -1,0 +1,4 @@
+icondir = $(datadir)/icons/hicolor/128x128/apps
+icon_DATA = xchat-gnome.png
+
+EXTRA_DIST = $(icon_DATA)
